--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,13 @@ __pycache__/
 debug_flight_recorder.db
 frontend/node_modules/
 frontend/dist/
-.env
+# Logs
+*.log
 server.log
+
+# Database files (user-specific trace data)
+*.db
+*.db-journal
+*.db-wal
+agentscope_traces.db
+.env
