chore: Implement Python best practices and reorganize tests
- 🧪 Organized tests into tests/ directory (unit, integration, e2e)
- 🔄 Moved legacy test files and fixed imports
- 📄 Added community health files (CONTRIBUTING, CHANGELOG, SECURITY, CODE_OF_CONDUCT)
- 📝 Added Issue and PR templates
- 🔧 Configured pytest, ruff, black, and mypy in pyproject.toml
- 🧹 Added .pre-commit-config.yaml
- ⬆️ Bumped version to 1.5.0
- 🙈 Updated .gitignore to exclude coverage artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,11 @@ server.log
 *.db-journal
 *.db-wal
 agentscope_traces.db
+
+# Testing & Coverage
+.coverage
+.coverage.*
+htmlcov/
+.pytest_cache/
+coverage.xml
 .env
