--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_backend"
 
 [project]
 name = "agentscope-local"
-version = "1.0.0"
-description = "Universal AI debugging flight recorder with RAG and Time Travel support"
+version = "1.5.0"
+description = "Privacy-first LLM observability with beautiful terminal UI and universal framework support"
 readme = "README.md"
 authors = [{name = "AgentScope Contributors"}]
 license = {text = "MIT"}
@@ -23,7 +23,7 @@ classifiers = [
     "Topic :: Software Development :: Debugging",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-keywords = ["llm", "debugging", "telemetry", "opentelemetry", "rag", "ai", "agents"]
+keywords = ["llm", "debugging", "telemetry", "opentelemetry", "rag", "ai", "agents", "observability"]
 requires-python = ">=3.8"
 dependencies = [
     "opentelemetry-api>=1.20.0",
@@ -36,15 +36,17 @@ dependencies = [
     "openai>=1.0.0",
     "anthropic>=0.7.0",
     "requests>=2.31.0",
-    "typer>=0.9.0",
+    "psutil>=5.9.0",
     "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
+    "mypy>=1.0.0",
 ]
 
 [project.scripts]
@@ -62,3 +64,26 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 "*" = ["frontend/dist/**/*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "--cov=agentscope --cov-report=html --cov-report=term-missing"
+
+[tool.ruff]
+line-length = 100
+target-version = "py38"
+select = ["E", "F", "I", "W", "UP"]
+ignore = ["E501"]  # Line too long (handled by black)
+
+[tool.black]
+line-length = 100
+target-version = ["py38", "py39", "py310", "py311", "py312"]
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
